# LinearAlgebraProject

./: CMakeLists.txt  main.cpp
data/: log.txt
headers/architecture/: architecture.hpp
headers/libraries/: Operations.hpp  Parser.hpp  Reader.hpp  Validator.hpp  Writer.hpp  libraries.hpp
headers/variables/: variables.hpp
sources/architecture/: architecture.cpp
sources/libraries/: Parser.cpp  Reader.cpp  Validator.cpp  Writer.cpp  libraries.cpp
